--- a/pages/sign/sign.html
+++ b/pages/sign/sign.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../../style/style.css">
 </head>
 <body>
     <div class="header">
@@ -28,10 +28,10 @@
         <div class="sign">
             
         
-        <form action="sign_up.php" method="POST">
+        <form action="sign.php" method="POST">
             <div class="signing">
-                <img class="logo2" src="../assets/image/logo.png" alt="">
-                <p>Имя пользователя: </p>
+                <img class="logo2" src="../../assets/image/logo.png" alt="">
+            <p>Имя пользователя: </p>
             <input class ="sign_name" name="user" type="text"/>
             <p>Пароль: </p>
             <input class="sign_password" name="pasword" type="password"/>
