--- a/public/pages/sign_up.html
+++ b/public/pages/sign_up.html
@@ -14,7 +14,7 @@
                     <li><a href="#">Пушкинская карта</a></li>
                     <li><a href="#">О нас</a></li>
 
-                       <a href="/index.php"> <img class="logo" src="/assets/image/logo.png" alt=""></a>
+                       <a href="../index.php"> <img class="logo" src="/assets/image/logo.png" alt=""></a>
                     <li><a href="#">Новости</a></li>
                     <li><a href="/pages/sign_up.html">Авторизация</a></li>
     
