--- a/public/pages/sign_up.html
+++ b/public/pages/sign_up.html
@@ -14,7 +14,7 @@
                     <li><a href="#">Пушкинская карта</a></li>
                     <li><a href="#">О нас</a></li>
 
-                       <a href="../index.php"> <img class="logo" src="/assets/image/logo.png" alt=""></a>
+                       <li><a href="/index.php"> <img class="logo" src="/assets/image/logo.png" alt=""></a></li>
                     <li><a href="#">Новости</a></li>
                     <li><a href="/pages/sign_up.html">Авторизация</a></li>
     
@@ -34,6 +34,7 @@
                 <p>Имя пользователя: </p>
             <input class ="sign_name" name="user" type="text"/>
             <p>Пароль: </p>
+
             <input class="sign_password" name="pasword" type="password"/>
             
             <input class = "submit" type="submit" value="Зарегистрироваться"/>
@@ -45,7 +46,7 @@
             <nav>
                 <ul>
                     <li><a href="#">О нас</a></li>
-                    <li><a href="#">Подарочные карты</a></li>
+                    <li><a href="pages\gift_card\gift_card.html">Подарочные карты</a></li>
                     <li><a href="#">Расмотрение притензий</a></li>
 
                     <img class="logo" src="/assets/image/logo.png" alt="">
