Добавление проверки пользователя и вход в админку

--- a/public/pages/auth/auth.html
+++ b/public/pages/auth/auth.html
@@ -14,7 +14,7 @@
                     <li><a href="#">Пушкинская карта</a></li>
                     <li><a href="#">О нас</a></li>
                     
-                    <li><a href="/index.php"> <img class="logo" src="/assets/image/logo.png" alt=""></a></li>
+                        <img class="logo" src="/assets/image/logo.png" alt="">
                     <li><a href="#">Новости</a></li>
                     <li><a href="/pages/auth/auth.html">Авторизация</a></li>
     
@@ -44,7 +44,7 @@
             <nav>
                 <ul>
                     <li><a href="#">О нас</a></li>
-                    <li><a href="pages\gift_card\gift_card.html">Подарочные карты</a></li>
+                    <li><a href="#">Подарочные карты</a></li>
                     <li><a href="#">Расмотрение притензий</a></li>
 
                     <img class="logo" src="/assets/image/logo.png" alt="">
