--- a/public/pages/gift_card/gift_card.html
+++ b/public/pages/gift_card/gift_card.html
@@ -23,10 +23,10 @@
             </nav>
             
         </header>
-    </div>
+    </div> 
 <div class="card">
     <div class="info_card">
-        <h2>Действует: </h2>
+        <h2>Действует:</h2>
         <p>- 12 месяцев с момента покупки</p>
         <P>- В любом кинотеатре "Chaika" в выбранном вами городе.</P>
         <p>На любой сеанс 2D/3D, кроме VIP-мест, Арт репертуара (Спектакль, Концерт, Артлекторий.)</p>
@@ -40,7 +40,7 @@
             <nav>
                 <ul>
                     <li><a href="#">О нас</a></li>
-                    <li><a href="#">Подарочные карты</a></li>
+                    <li><a href="gift_card.html">Подарочные карты</a></li>
                     <li><a href="#">Расмотрение притензий</a></li>
 
                     <img class="logo" src="/assets/image/logo.png" alt="">
